--- a/MRV.Leads.Api/MRV.Leads.Api.csproj
+++ b/MRV.Leads.Api/MRV.Leads.Api.csproj
@@ -18,10 +18,23 @@
 
     <ItemGroup>
       <Compile Remove="WeatherForecast.cs" />
+      <Compile Remove="Utils\**" />
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="Controllers\Leads\Communication" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Remove="Utils\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="Utils\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Remove="Utils\**" />
     </ItemGroup>
 
 </Project>
