--- a/MRV.Leads.Api/appsettings.json
+++ b/MRV.Leads.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:iebt-test-mrv.database.windows.net,1433;Initial Catalog=leads_database;Persist Security Info=False;User ID=dbmaster;Password=@8563Gui9274;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:iebt-test-mrv.database.windows.net,1433;Initial Catalog=leads_database;Persist Security Info=False;User ID=dbmaster;Password=None;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
